--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="/css/main.css">
     <title><%= pageTitle %></title>
 -->
-<%- include('../includes/head.ejs') %>
+<%- include('./includes/head.ejs') %>
 </head>
 <body>
-    <%- include('../includes/navigation.ejs') %>
+    <%- include('./includes/navigation.ejs') %>
 
     <main>
         <div class="topnav">
             <input type="text" placeholder="Search..">
         </div>
-        <% if (mus.length > 0) { %>
+        <% if ( mus.length > 0) { %>
             <div class="grid">
                 <% for (let musician of mus) { %>
                     <article class="card.musician-item">
@@ -45,4 +45,4 @@
             <h1>No musicians yet!</h1>
         <% } %>
     </main>
-<%- include('../includes/end.ejs') %>
+<%- include('./includes/end.ejs') %>
