--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -17,53 +17,50 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if (errorMessage) { %>
-            <div class="user-message user-message--error"><%= errorMessage %></div>
-        <% } %>
         <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
                 <label for="name">Name</label>
                 <input 
-                    class="<%= validationErrors.find(e => e.param === 'name') ? 'invalid' : '' %>"
+                    class=""
                     type="text" 
                     name="name" 
                     id="name" 
-                    value="<% if (editing || hasError ) { %><%= musician.name %><% } %>">
+                    value="">
             </div>
             <div class="form-control">
                 <label for="instrument">Instrument</label>
                 <input 
-                    class="<%= validationErrors.find(e => e.param === 'instrument') ? 'invalid' : '' %>"
+                    class=""
                     type="text" 
                     name="instrument" 
                     id="instrument" 
-                    value="<% if (editing || hasError ) { %><%= musician.instrument %><% } %>">
+                    value="">
             </div>
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email" value="<%= oldInput.email %>">
+                <input type="email" name="email" id="email" value="">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" value="<%= oldInput.password %>">
+                <input type="password" name="password" id="password" value="">
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword %>"">
+                <input type="password" name="confirmPassword" id="confirmPassword" value="">
             </div>
             <div class="form-control">
                 <label for="text">City</label>
-                <input type="text" name="city" id="city" value="<%= oldInput.city %>">
+                <input type="text" name="city" id="city" value="">
             </div>
             <div class="form-control">
-                <label for="address"><Address></Address></label>
+                <label for="address">Address</Address></label>
                 <textarea 
                     class="address"
                     name="address" 
                     id="address" 
-                    rows="5"><% if (editing || hasError) { %><%= musician.address %><% } %></textarea>
+                    rows="5"></textarea>
             </div>
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <input type="hidden" name="_csrf" value="">
             <button class="btn" type="submit">Signup</button>
         </form>
     </main>
