--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -11,11 +11,12 @@
 			</li>
 		</ul>
 		<ul class="main-header__item-list">
-			<li class="main-header__item">
-				<form action="/logout" method="post">
-					<button type="submit">Logout</button>
-				</form>
-			</li>
+            <li class="main-header_item">
+                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+            </li>
+            <li class="main-header_item">
+                <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+            </li>
 		</ul>
 	</nav>
 </header>
