--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -18,7 +18,7 @@
                 <a class="<%= path === '/signup' ? 'active' : '' %>" href="/login">Signup</a>
             </li>
             <li class="main-header_item">
-                <a class="<%= path === '/login' ? 'active' : '' %>" href="/signup">login</a>
+                <a class="<%= path === '/login' ? 'active' : '' %>" href="/signup">Login</a>
             </li>
 		</ul>
 	</nav>
