--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -7,7 +7,7 @@
 				<a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
 			</li>
 			<li class="main-header__item">
-				<a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Profile</a>
+				<a class="<%= path === '/products' ? 'active' : '' %>" href="/user-profile">Profile</a>
 			</li>
 			<li class="main-header__item">
 				<a class="<%= path === '/search' ? 'active' : '' %>" href="/products">Search</a>
