--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -3,23 +3,47 @@
 	<button id="side-menu-toggle">Menu</button>
 	<nav class="main-header__nav">
 		<ul class="main-header__item-list">
-			<li class="main-header__item">
-				<a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
-			</li>
-			<li class="main-header__item">
-				<a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Profile</a>
-			</li>
-			<li class="main-header__item">
-				<a class="<%= path === '/search' ? 'active' : '' %>" href="/products">Search</a>
+			<li class="main-header__logo">
+				<a class="main-header__logo-link" href="/"><img src="/images/tuner-logo-sm.png"></a>
 			</li>
 		</ul>
 		<ul class="main-header__item-list">
-            <li class="main-header_item">
+			<li class="main-header__item">
+				<a class="<%= path === '/' ? 'active' : '' %>" href="/">Search</a>
+			</li>
+		</ul>
+		<ul class="main-header__item-list" id="main-header__user-management">
+            <li class="main-header__item">
                 <a class="<%= path === '/signup' ? 'active' : '' %>" href="/login">Signup</a>
             </li>
-            <li class="main-header_item">
+			<li class="main-header__item">
+				<a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile">Profile</a>
+			</li>
+            <li class="main-header__item">
                 <a class="<%= path === '/login' ? 'active' : '' %>" href="/signup">Login</a>
             </li>
 		</ul>
 	</nav>
 </header>
+
+<nav class="mobile-nav">
+	<ul class="main-header__item-list">
+		<li class="main-header__logo">
+			<a class="main-header__logo-link" href="/"><img src="/images/tuner-logo-sm.png"></a>
+		</li>
+	</ul>
+	<ul class="mobile-nav__item-list">
+		<li class="mobile-nav__item">
+			<a class="<%= path === '/' ? 'active' : '' %>" href="/">Search</a>
+		</li>
+		<li class="mobile-nav__item">
+			<a class="<%= path === '/signup' ? 'active' : '' %>" href="/login">Signup</a>
+		</li>
+		<li class="mobile-nav__item">
+			<a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile">Profile</a>
+		</li>
+		<li class="mobile-nav__item">
+			<a class="<%= path === '/login' ? 'active' : '' %>" href="/signup">Login</a>
+		</li>
+	</ul>
+</nav>
