--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -14,13 +14,13 @@
 		</ul>
 		<ul class="main-header__item-list" id="main-header__user-management">
             <li class="main-header__item">
-                <a class="<%= path === '/signup' ? 'active' : '' %>" href="/login">Signup</a>
+                <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
             </li>
 			<li class="main-header__item">
 				<a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile">Profile</a>
 			</li>
             <li class="main-header__item">
-                <a class="<%= path === '/login' ? 'active' : '' %>" href="/signup">Login</a>
+                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
             </li>
 		</ul>
 	</nav>
