--- a/views/musician/profile.ejs
+++ b/views/musician/profile.ejs
@@ -9,24 +9,24 @@
     <title><%= pageTitle %></title>
 -->
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/css/profile.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
 
-            <main>
+            <main class="centered">
                 <div class="welcome">
                     <h1>Welcome <%= musician.name %>!</h1>
-                    <h3><%= musician.name %>'s Page</h3>
+                    <h2><%= musician.name %>'s Page</h2>
                 </div>
                 <div class="profile-photo">
                     <img src="<%= musician.imageUrl %>" alt="<%= musician.name %>">
                 </div>
                 <div class="user-data">
-                    <p><%= musician.instrument %></p>
-                    <p><%= musician.city %></p>
-                    <p><%= musician.address %></p>
+                    <h3>Instrument:</h3><p><%= musician.instrument %></p>
+                    <h3>Address:</h3><p><%= musician.address %></p>
+                    <h3>City:</h3><p><%= musician.city %></p>
                 </div>
                 
 
