--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -18,6 +18,7 @@
 
     <main>
         <form class="login-form" action="/login" method="POST" novalidate>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
             <div class="form-control">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email" value="">
@@ -25,8 +26,12 @@
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password" value="">
+                <% if (error != null) {%>
+                    <% if (error[0] == 'login') { %>
+                        <span class="form-error"><%= error[1] %></span>
+                    <% } %>
+                <% } %>
             </div>
-            <input type="hidden" name="_csrf" value="">
             <button class="btn" type="submit">Login</button>
         </form>
         <div class="centered">
