changed one of the search inputs to be a keyword search

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                 <h1 class="search-box__heading">Search</h1>
                 <div class="search-box__filters">
                     <form action="/search" method="post">
-                        <input type="text" placeholder="Search by name">
+                        <input type="text" placeholder="Search by keyword" >
                         <details>
                             <summary>Search by Location:</summary>
                             <input type="text" placeholder="Location" name="location">
