--- a/views/musician/profile.ejs
+++ b/views/musician/profile.ejs
@@ -28,6 +28,9 @@
                     <h3>Address:</h3><p><%= musician.address %></p>
                     <h3>City:</h3><p><%= musician.city %></p>
                 </div>
+                <form action="edit-profile" method="post">
+                    <button type="submit">test edit</button>
+                </form>
                 
 
             </main>
