--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -10,9 +10,9 @@ body {
   }
   
   main {
-    width: 100%;
-    height: 100vh;
+    width: auto;    
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
   } 
@@ -86,6 +86,6 @@ body {
   
   .user-message {
     text-align: center;
-    font-size: 3rem;
+    font-size: 1rem;
     font-family: inherit;
   }
