--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -31,14 +31,10 @@
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" value="">
-                <% if (error != null) {%>
-                    <% if (error[0] == 'login') { %>
-                        <span class="form-error"><%= error[1] %></span>
-                    <% } %>
-                <% } %>
+                <input class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>" type="password" name="password" id="password" value="<%= oldInput.password %>">
             </div>
             <button class="btn" type="submit">Login</button>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>"> <!-- When the button is pressed it passes this csrfToken to allow us to render our next view. -->  
         </form>
         <div class="centered">
             <a href="/reset">Reset Password</a>
