--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -34,7 +34,7 @@
                 <input class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>" type="password" name="password" id="password" value="<%= oldInput.password %>">
             </div>
             <button class="btn" type="submit">Login</button>
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>"> <!-- When the button is pressed it passes this csrfToken to allow us to render our next view. -->  
+        <!--   <input type="hidden" name="_csrf" value="<%= csrfToken %>"> <!-- When the button is pressed it passes this csrfToken to allow us to render our next view. -->  
         </form>
         <div class="centered">
             <a href="/reset">Reset Password</a>
